<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzle Alarm Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm_details">AlarmDetailsActivity</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>
    <string name="details_repeat_days">Repeat Days</string>
    <string name="details_repeat_days_default">Select the days</string>
    <string name="details_difficulty">Difficulty Level</string>
    <string name="details_difficulty_default">Select the level</string>
    <string name="details_questions">Number of Questions</string>
    <string name="details_questions_default">Select the number of Questions</string>
    <string name="details_vibrate">Vibrate</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string-array name="week_days">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <string-array name="difficulty_levels">
        <item>EASY</item>
        <item>MEDIUM</item>
        <item>HARD</item>
    </string-array>

    <string-array name="questions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>
    <string name="title_activity_alert">AlertActivity</string>

</resources>
