<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:isScrollContainer="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".AlarmDetailsActivity" >

        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_time_picker"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/details_alarm_name" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />

        <com.codinginflow.project.AlarmToggleButton
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="@string/details_repeat_weekly" />

        <View
            android:id="@+id/divider9"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_weekly" />

        <com.codinginflow.project.AlarmToggleButton
            android:id="@+id/alarm_details_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider9"
            android:checked="true"
            android:text="@string/details_vibrate" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_vibrate" />
        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
        <RelativeLayout
            android:id="@+id/repeat_days_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider3"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_repeat_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_repeat_days"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_item_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_repeat_days"
                android:text="S"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_sunday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="M"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_monday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="T"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_tuesday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="W"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_wednesday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="T"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_thursday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="F"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/alarm_item_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/alarm_item_friday"
                android:layout_below="@+id/alarm_repeat_days"
                android:layout_marginLeft="4dp"
                android:text="S"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <View
            android:id="@+id/divider6"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/repeat_days_container" />

        <LinearLayout
            android:id="@+id/difficulty_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider6"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_difficulty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/difficulty_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_difficulty_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider7"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/difficulty_container" />

        <LinearLayout
            android:id="@+id/questions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider7"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_questions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/question_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_questions_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider8"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/questions_container" />

    </RelativeLayout>

</ScrollView>